tests/golden/error/glob_conflict/mod_a.tg
// Module A defines its own version of `collide`.

pub fn collide(x: Nat) -> Nat {
    x
}
